fix bg and collapse

--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,11 @@
+
+        html{
+            background-image: url("/img/SLBackground.png");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            height: 100%;
+        }
         table{
                     border: 1px solid black;
                     border-collapse: collapse;
@@ -22,11 +30,9 @@
             border: 1px dashed black;
         }
 
-        body{
-            background-color: hsl(204, 17%, 55%);
-        }
 
         #Introduction, #Portfolio, #Assignments, #Schedule, #ContactInfo{
             position: absolute;
+            visibility: hidden;
         }
 
